# VANTAGE

./: .bandit  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  00_INDICE.md  AUDITORIA_THREAT_TOOL.md  CONTRIBUTING.md  Dockerfile  GUIA_CORRECOES.md  README.md  README_IMPROVED.md  SECURITY.md  Threat-Intelligence-Tool.code-workspace  analyzer.py  api_client.py  api_client_async.py  audit.py  auth.py  config.py  conftest.py  db.py  docker-compose.hunting-kali.yml  docker-compose.operational-architect.yml  docker-compose.yml  limiters.py  logging_config.py  main.py  payload.json  payload2.json  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt  requirements_linux.txt  seed_users.py  skills-lock.json  test_ip.json  (+5 more)
backend/: .flake8  Dockerfile  analyzer.py  app_state.py  auth.py  config.py  conftest.py  credential_manager.py  crypto.py  cti_modeling.py  db.py  exposure_contracts.py  exposure_monitoring.py  exposure_runtime.py  hunting_contracts.py  hunting_runtime.py  identity.py  json  limiters.py  logging_config.py  mailer.py  main.py  mongo_utils.py  network_security.py  operational_config.py  operational_status.py  policies.py  pyproject.toml  report_generator.py  requirements.txt  scans.py  scoring.py  session_revocation.py  shift_handoff_config.py  shift_handoff_migration.py  threat_check.py  threat_feed_adapters.py  threat_ingestion.py  threat_ingestion_runtime.py  threat_items.py  (+4 more)
backend/clients/: api_client.py  api_client_async.py
backend/extensions/: __init__.py  registry.py
backend/recon/: __init__.py  correlator.py  engine.py
backend/reports/: __init__.py  formatters.py  layout.py  translations.py
(+426 files in other folders)
