[project]
name = "vantage-backend"
version = "1.0.0"
description = "SOC Threat Intelligence Platform — FastAPI + React"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 100
exclude = [".venv", "migrations", "__pycache__"]
