[project]
name = "vantage-backend"
version = "1.0.0"
description = "SOC Threat Intelligence Platform — FastAPI + React"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--ignore=tests/test_exposure_contracts.py",
    "--ignore=tests/test_exposure_monitoring.py",
    "--ignore=tests/test_exposure_router.py",
    "--ignore=tests/test_exposure_runtime.py",
    "--ignore=tests/test_extensions_registry.py",
    "--ignore=tests/test_hunting_contracts.py",
    "--ignore=tests/test_hunting_router.py",
    "--ignore=tests/test_hunting_runtime.py",
]

[tool.flake8]
max-line-length = 100
exclude = [".venv", "migrations", "__pycache__"]
